--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "require": {
         "php": ">=5.6",
         "ext-intl": "*",
-        "illuminate/support": "~5.4",
-        "illuminate/contracts": "~5.4",
+        "illuminate/support": "~5.4|^6.0",
         "moneyphp/money": "^3.2"
     },
     "autoload": {
@@ -25,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "dev-master": "1.2-dev"
         },
         "laravel": {
             "providers": [
