--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": "^7.2",
         "ext-intl": "*",
-        "illuminate/support": "~5.4|^6.0",
+        "illuminate/support": "^6.0|^7.0",
         "moneyphp/money": "^3.2"
     },
     "autoload": {
@@ -23,9 +23,6 @@
         ]
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "1.2-dev"
-        },
         "laravel": {
             "providers": [
                 "Origami\\Money\\MoneyServiceProvider"
