--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0.2",
         "ext-intl": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
         "moneyphp/money": "^3.2"
     },
     "autoload": {
