--- a/composer.json
+++ b/composer.json
@@ -4,30 +4,38 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Papertank",
+            "name": "Papertank Limited",
+            "homepage": "https://papertank.com",
             "email": "hello@papertank.com"
+        },
+        {
+            "name": "David Rushton",
+            "email": "david@papertank.com",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php": "^7.2|^8.0.2",
+        "php": "^8.0",
         "ext-intl": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
-        "moneyphp/money": "^3.2"
+        "illuminate/contracts": "^8.0|^9.0|^10.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "moneyphp/money": "^3.3"
     },
     "autoload": {
         "psr-4": {
             "Origami\\Money\\": "src/"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
+        }
     },
     "extra": {
+        "branch-alias": {
+            "dev-develop": "2.x-dev"
+        },
         "laravel": {
             "providers": [
                 "Origami\\Money\\MoneyServiceProvider"
             ]
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
