--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "require": {
         "php": "^8.0",
         "ext-intl": "*",
-        "illuminate/contracts": "^8.0|^9.0|^10.0",
-        "illuminate/support": "^8.0|^9.0|^10.0",
+        "illuminate/contracts": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "moneyphp/money": "^3.3"
     },
     "autoload": {
